--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <table cellspacing="40">
     <tr>
-      <td><img src="images\jidez.jpeg" alt="jaisleek profile picture"></td>
+      <td><img src="jidez.jpeg" alt="jaisleek profile picture"></td>
       <td><h1>Jaisleek</h1>
         <p><em>The Founder and CEO <strong><a href="https://www.appbrewery.co/p/web-development-course-resources/">Jaisleek Movement</a></strong>.</em></p>
         <P>I am an Ios and Web Developer. I love coffee and brew my own beers.</p></td>
